CSS Modules Created

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
     <div class="container-menu">
         <a href="index.html"><img src="img/bikcraft.svg" alt="logo"></a>
-        <ul class="header-menu font-1-m" aria-label="primary">
+        <ul class="header-menu font-1-m cor-branca" aria-label="primary">
             <li><a href="#">Bicicletas</a></li>
             <li><a href="#">Seguros</a></li>
             <li><a href="#">Contatos</a></li>
@@ -22,7 +22,7 @@
     <main class="main">
         <div class="container-main">
             <div class="main-texto">
-                <h1 class="font-1-xxl">Bicicletas feitas
+                <h1 class="font-1-xxl cor-branca">Bicicletas feitas
                 sob medida<span class="ponto-amarelo">.</span></h1>
                 <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a href="#bicicletas" class="btn">SELECIONE A SUA</a>   
@@ -40,6 +40,34 @@
 
     </main>
 
+    <article class="choose-bike">
 
+        <h2 class="font-1-xxl">escolha a sua<span class="ponto-amarelo">.</span></h2>
+
+        <ul class="container-choose"> 
+           
+
+            <li class="bikes-choose-list">
+                <img src="img/bicicletas/bicicleta2.jpg" alt="magic might">
+                <div class="bike-title">
+                <h3>Magic Might</h3>
+                <span class="valor-bike">R$ 2499</span>
+                </div>
+            </li>
+
+            <li class="bikes-choose-list">
+                <img src="img/bicicletas/bicicleta1.jpg" alt="magic might">
+                <h3>Magic Might</h3>
+                <span class="valor-bike">R$ 2499</span>
+            </li>
+
+            <li class="bikes-choose-list">
+                <img src="img/bicicletas/bicicleta3.jpg" alt="magic might">
+                <h3>Magic Might</h3>
+                <span class="valor-bike">R$ 2499</span>
+            </li>
+
+        </ul>
+    </article>
 </body>
 </html>
