--- a/termos.html
+++ b/termos.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
+<header class="header">
     <div class="container-menu">
         <a href="index.html"><img src="img/bikcraft.svg" alt="logo"></a>
         <ul class="header-menu font-1-m cor-branca" aria-label="primary">
             <li><a href="bikes.html">Bicicletas</a></li>
             <li><a href="seguros.html">Seguros</a></li>
-            <li><a href="contatos.html">Contatos</a></li>
+            <li><a href="contato.html">Contatos</a></li>
         </ul>
     </div>
-    </header>
+</header>
 
     <main>
         <div class="titulo-interno-bg">
@@ -60,13 +60,15 @@
         </div>
     </main>
 
-    <footer>
-        <div class="container-footer">
-            <div class="div-logo">
-               <a href=""><img src="img/bikcraft.svg" alt=""></a>
-            </div>
+<footer>
+    <div class="container-footer">
+        <div class="div-logo">
+            <a href=""><img src="img/bikcraft.svg" alt=""></a>
 
-            <div class="contato-footer">
+
+        </div>
+
+        <div class="contato-footer">
             <h3 class="font-2-l-b cor-branca">CONTATO</h3>
             <p class="font-2-m cor-c5">(21) 7777-77777</p>
             <p class="font-2-m cor-c5">contato@bikecraft.com</p>
@@ -77,20 +79,20 @@
                 <a href="#"><img src="img/icones/redes-sociais/facebook.svg" alt=""></a>
                 <a href="#"><img src="img/icones/redes-sociais/youtube.svg" alt=""></a>
             </div>
-            </div>
-
-            <div class="info-footer">
-                <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
-                <a class="font-2-m cor-c5" href="bikes.html">Bicletas</a>
-                <a class="font-2-m cor-c5">Produtos</a>
-                <a class="font-2-m cor-c5">Contato</a>
-                <a class="font-2-m cor-c5" href="termos.html">Termos e Condições</a>
-            </div>
-
-            <span class="font-2-m cor-c5">Alguns direitos reservados.</span>
-
         </div>
-    </footer>
+
+        <div class="info-footer">
+            <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
+            <a class="font-2-m cor-c5" href="bikes.html">Bicicletas</a>
+            <a class="font-2-m cor-c5" href="seguros.html">Produtos</a>
+            <a class="font-2-m cor-c5" href="contato.html">Contato</a>
+            <a class="font-2-m cor-c5" href="termos.html">Termos e Condições</a>
+        </div>
+
+        <span class="font-2-m cor-c5">Alguns direitos reservados.</span>
+
+    </div>
+</footer>
 
 </body>
 </html>
