--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header class="header">
-    <div class="container-menu">
-        <a href="index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
-        <ul class="header-menu font-1-m cor-branca" aria-label="primary">
-            <li><a href="bikes.html">Bicicletas</a></li>
-            <li><a href="seguros.html">Seguros</a></li>
-            <li><a href="contatos.html">Contatos</a></li>
-        </ul>
-    </div>
+        <div class="container-menu">
+            <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
+            <ul class="header-menu font-1-m cor-branca" aria-label="primary">
+                <li><a href="../bikes.html">Bicicletas</a></li>
+                <li><a href="../seguros.html">Seguros</a></li>
+                <li><a href="../contatos.html">Contatos</a></li>
+            </ul>
+        </div>
     </header>
 
     <main class="titulo-interno-bg bike-interna-titulo">
@@ -36,7 +36,7 @@
             <div class="info-bike-interna">
                 <p class="cor-c5 font-2-l texto-interno">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="comprar-agora">
-                    <a href="#" class="btn">COMPRAR AGORA</a>
+                    <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
                     <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
                     <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">3 em estoque</span>
                 </div>
@@ -155,13 +155,13 @@
     </article>
 
 
-    <footer>
-        <div class="container-footer">
-            <div class="div-logo">
-               <a href=""><img src="../img/bikcraft.svg" alt=""></a>
-            </div>
+<footer>
+    <div class="container-footer">
+        <div class="div-logo">
+            <a href=""><img src="../img/bikcraft.svg" alt=""></a>
+        </div>
 
-            <div class="contato-footer">
+        <div class="contato-footer">
             <h3 class="font-2-l-b cor-branca">CONTATO</h3>
             <p class="font-2-m cor-c5">(21) 7777-77777</p>
             <p class="font-2-m cor-c5">contato@bikecraft.com</p>
@@ -172,20 +172,20 @@
                 <a href="#"><img src="../img/icones/redes-sociais/facebook.svg" alt=""></a>
                 <a href="#"><img src="../img/icones/redes-sociais/youtube.svg" alt=""></a>
             </div>
-            </div>
-
-            <div class="info-footer">
-                <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
-                <a class="font-2-m cor-c5" href="../bikes.html">Bicletas</a>
-                <a class="font-2-m cor-c5">Produtos</a>
-                <a class="font-2-m cor-c5">Contato</a>
-                <a class="font-2-m cor-c5" href="../termos.html">Termos e Condições</a>
-            </div>
-
-            <span class="font-2-m cor-c5">Alguns direitos reservados.</span>
-
         </div>
-    </footer>
+
+        <div class="info-footer">
+            <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
+            <a class="font-2-m cor-c5" href="../bikes.html">Bicletas</a>
+            <a class="font-2-m cor-c5" href="../seguros.html">Produtos</a>
+            <a class="font-2-m cor-c5" href="../contato.html">Contato</a>
+            <a class="font-2-m cor-c5" href="../termos.html">Termos e Condições</a>
+        </div>
+
+        <span class="font-2-m cor-c5">Alguns direitos reservados.</span>
+
+    </div>
+</footer>
 
 </body>
 </html>
