--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -10,11 +10,11 @@
 <body>
     <header class="header">
     <div class="container-menu">
-        <a href="index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
         <ul class="header-menu font-1-m cor-branca" aria-label="primary">
-            <li><a href="bikes.html">Bicicletas</a></li>
-            <li><a href="seguros.html">Seguros</a></li>
-            <li><a href="contatos.html">Contatos</a></li>
+            <li><a href="../bikes.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contatos.html">Contatos</a></li>
         </ul>
     </div>
     </header>
@@ -35,7 +35,7 @@
             <div class="info-bike-interna">
     <p class="cor-c5 font-2-l texto-interno">A Nimbus Stark é uma bicicleta revolucionária projetada com paixão e precisão pela nossa equipe de especialistas. Combinando tecnologia avançada e design inovador, ela é a escolha perfeita para ciclistas que buscam alta performance e conforto incomparável.</p>
     <div class="comprar-agora">
-        <a href="#" class="btn">COMPRAR AGORA</a>
+        <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">3 em estoque</span>
     </div>
@@ -120,7 +120,7 @@
            
 
             <li class="bikes-choose-list">
-                <a href="nimbus.html" class="link-choose-list">
+                <a href="magic.html" class="link-choose-list">
                 <img src="../img/bicicletas/bicicleta1.jpg" alt="magic might">
                
                 <h3 class="font-1-xl">Magic Might</h3>
@@ -179,8 +179,8 @@
             <div class="info-footer">
                 <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
                 <a class="font-2-m cor-c5" href="../bikes.html">Bicletas</a>
-                <a class="font-2-m cor-c5">Produtos</a>
-                <a class="font-2-m cor-c5">Contato</a>
+                <a class="font-2-m cor-c5" href="../seguros.html">Produtos</a>
+                <a class="font-2-m cor-c5" href="../contato.html">Contato</a>
                 <a class="font-2-m cor-c5" href="../termos.html">Termos e Condições</a>
             </div>
 
