--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="header">
+        <header class="header">
     <div class="container-menu">
-        <a href="index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
+        <a href="../index.html"><img src="../img/bikcraft.svg" alt="logo"></a>
         <ul class="header-menu font-1-m cor-branca" aria-label="primary">
-            <li><a href="bikes.html">Bicicletas</a></li>
-            <li><a href="seguros.html">Seguros</a></li>
-            <li><a href="contatos.html">Contatos</a></li>
+            <li><a href="../bikes.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contatos.html">Contatos</a></li>
         </ul>
     </div>
     </header>
@@ -36,7 +36,7 @@
        <div class="info-bike-interna">
     <p class="cor-c5 font-2-l texto-interno">Apresentamos a Nebula Cosmic, uma bicicleta que redefine a experiência de pedalada cósmica. Com um design futurista inspirado nas galáxias distantes, essa obra-prima tecnológica é a escolha ideal para os aventureiros do universo ciclístico.</p>
     <div class="comprar-agora">
-        <a href="#" class="btn">COMPRAR AGORA</a>
+        <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">5 em estoque</span>
     </div>
@@ -158,7 +158,7 @@
     </article>
 
 
-    <footer>
+   <footer>
         <div class="container-footer">
             <div class="div-logo">
                <a href=""><img src="../img/bikcraft.svg" alt=""></a>
@@ -180,8 +180,8 @@
             <div class="info-footer">
                 <h3 class="font-2-l-b cor-branca">INFORMAÇÕES</h3>
                 <a class="font-2-m cor-c5" href="../bikes.html">Bicletas</a>
-                <a class="font-2-m cor-c5">Produtos</a>
-                <a class="font-2-m cor-c5">Contato</a>
+                <a class="font-2-m cor-c5" href="../seguros.html">Produtos</a>
+                <a class="font-2-m cor-c5" href="../contato.html">Contato</a>
                 <a class="font-2-m cor-c5" href="../termos.html">Termos e Condições</a>
             </div>
 
