--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikecraft</title>
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="Magic" content="Put your description here.">
+
 </head>
 <body>
     <header class="header">
