--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -36,7 +36,7 @@
        <div class="info-bike-interna">
     <p class="cor-c5 font-2-l texto-interno">Apresentamos a Nebula Cosmic, uma bicicleta que redefine a experiência de pedalada cósmica. Com um design futurista inspirado nas galáxias distantes, essa obra-prima tecnológica é a escolha ideal para os aventureiros do universo ciclístico.</p>
     <div class="comprar-agora">
-        <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
+        <a href="../orcamento.html?produto=bikecraft&bike=nebula" class="btn">COMPRAR AGORA</a>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">5 em estoque</span>
     </div>
@@ -51,7 +51,7 @@
             </li>
                     
             <li>
-                <img src="../img/icones/bicicletas/seguro2.svg" alt="">
+                <img src="../img/icones/bicicletas/seguro2.svg" alt="seguro" width="24px">
                 <h3 class="cor-branca font-1-m">Estabilidade Interplanetária</h3>
                 <p class="font-2-xs cor-c6">Graças à sua estrutura resistente e sistema de suspensão avançado, a Nebula Cosmic oferece estabilidade incomparável, permitindo explorar novos caminhos em terrenos acidentados e trilhas galácticas.</p>
             </li>
@@ -190,5 +190,5 @@
         </div>
     </footer>
 
-</body>
-</html>
+<script src="../js/script.js"></script>
+</body></html>
