--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <li class="font-2-m cor-branca ">Suporte 08h às 18h</li>
                     <li class="font-2-m cor-branca ">Cobertura estadual</li>
                 </ul>
-                <a href="orcamento.html" class="btn">INSCREVA-SE</a>
+                <a href="./orcamento.html?produto=seguro&plano=prata" class="btn">INSCREVA-SE</a>
             </div>
 
             <div class="planos">
@@ -170,7 +170,7 @@
                     <li class="font-2-m cor-branca ">Desconto em parceiros</li>
                     <li class="font-2-m cor-branca ">Acesso ao Clube Bikcraft</li>
                 </ul>
-                <a href="orcamento.html" class="btn">INSCREVA-SE</a>
+                <a href="./orcamento.html?produto=seguro&plano=ouro" class="btn">INSCREVA-SE</a>
             </div>
 
             
@@ -210,5 +210,6 @@
 
     </div>
 </footer>
-</body>
-</html>
+
+<script src="js/script.js"></script>
+</body></html>
