--- a/seguros.html
+++ b/seguros.html
@@ -44,7 +44,7 @@
                     <li class="font-2-m cor-branca ">Suporte 08h às 18h</li>
                     <li class="font-2-m cor-branca ">Cobertura estadual</li>
                 </ul>
-                <a href="orcamento.html" class="btn">INSCREVA-SE</a>
+                <a href="./orcamento.html?produto=seguro&plano=prata" class="btn">INSCREVA-SE</a>
             </div>
 
             <div class="planos">
@@ -61,7 +61,7 @@
                     <li class="font-2-m cor-branca ">Desconto em parceiros</li>
                     <li class="font-2-m cor-branca ">Acesso ao Clube Bikcraft</li>
                 </ul>
-                <a href="orcamento.html" class="btn">INSCREVA-SE</a>
+                <a href="./orcamento.html?produto=seguro&plano=ouro" class="btn">INSCREVA-SE</a>
             </div>
 
             
@@ -193,5 +193,5 @@
         </div>
     </footer>
 
-</body>
-</html>
+<script src="js/script.js"></script>
+</body></html>
