--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -37,7 +37,7 @@
             <div class="info-bike-interna">
     <p class="cor-c5 font-2-l texto-interno">A Nimbus Stark é uma bicicleta revolucionária projetada com paixão e precisão pela nossa equipe de especialistas. Combinando tecnologia avançada e design inovador, ela é a escolha perfeita para ciclistas que buscam alta performance e conforto incomparável.</p>
     <div class="comprar-agora">
-        <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
+        <a href="../orcamento.html?produto=bikecraft&?produto=bikecraft&bike=magic" class="btn">COMPRAR AGORA</a>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
         <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">3 em estoque</span>
     </div>
@@ -52,7 +52,7 @@
             </li>
                     
             <li>
-                <img src="../img/icones/bicicletas/seguro2.svg" alt="">
+                <img src="../img/icones/bicicletas/seguro2.svg" alt="seguro" width="24px" height="24px">
                 <h3 class="cor-branca font-1-m">Segurança Avançada</h3>
                 <p class="font-2-xs cor-c6">A sua segurança é a nossa prioridade. Magic Might possui sistemas de freios de última geração e componentes testados para oferecer a máxima estabilidade e controle.</p>
             </li>
@@ -191,5 +191,6 @@
         </div>
     </footer>
 
-</body>
-</html>
+<script src="../js/script.js"></script>
+
+</body></html>
