--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -36,7 +36,7 @@
             <div class="info-bike-interna">
                 <p class="cor-c5 font-2-l texto-interno">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="comprar-agora">
-                    <a href="../orcamento.html" class="btn">COMPRAR AGORA</a>
+                    <a href="../orcamento.html?produto=bikecraft&bike=nimbus" class="btn">COMPRAR AGORA</a>
                     <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
                     <span class="info-compra font-2-xs cor-c5"> <img src="../img/icones/estoque.svg" alt="">3 em estoque</span>
                 </div>
@@ -52,7 +52,7 @@
                     </li>
                             
                     <li>
-                        <img src="../img/icones/bicicletas/seguro2.svg" alt="">
+                        <img src="../img/icones/bicicletas/seguro2.svg" alt="seguro" width="24px">
                         <h3 class="cor-branca font-1-m">Segurança</h3>
                         <p class="font-2-xs cor-c6">Priorizamos a segurança de nossos clientes.</p>
                     </li>
@@ -187,5 +187,6 @@
     </div>
 </footer>
 
-</body>
-</html>
+<script src="../js/script.js"></script>
+
+</body></html>
