--- a/orcamento.html
+++ b/orcamento.html
@@ -30,11 +30,11 @@
         </div>
 
         
-            <form action="./formulario.html" class="container-2 form-orcamento">
+            <form action="./orcamento.html" class="container-2 form-orcamento">
                 <div class="escolha-produto">
                     <h2 class="font-1-xs cor-c5">BIKECRAFT OU SEGURO?</h2>
                     
-                        <input type="radio" name="produto" id="bikecraft" value="bikecraft" checked>
+                        <input type="radio" name="produto" id="bikecraft" value="bikecraft">
                         <label for="bikecraft">Bikecraft</label>
                         <input type="radio" name="produto" id="seguro" value="seguro">
                         <label for="seguro">Seguro</label>
@@ -215,5 +215,6 @@
         </div>
     </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
