--- a/seguros.html
+++ b/seguros.html
@@ -118,43 +118,56 @@
 <article class="perguntas-frequentes">
     <h2 class="font-1-xxl">perguntas frequentes <span class="ponto-amarelo">.</span></h2>
 
-    <ul>
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Qual forma de pagamento vocês aceitam?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</p>
-        </li>
+<dl>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-1" aria-expanded="true">Qual forma de pagamento
+                vocês aceitam?</button></dt>
+        <dd class="cor-c9 font-2-m active" id="pergunta-1">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express.
+            Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+    </div>
 
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Como posso entrar em contato?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Você pode entrar em contato conosco através do número (21) 7777-77777 ou pelo e-mail contato@bikecraft.com. Estamos prontos para atender suas dúvidas e necessidades.</p>
-        </li>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-2" aria-expanded="false">Como posso entrar em
+                contato?</button></dt>
+        <dd class="cor-c9 font-2-m" id="pergunta-2">Você pode entrar em contato conosco através do número (21)
+            7777-77777 ou pelo e-mail
+            contato@bikecraft.com. Estamos prontos para atender suas dúvidas e necessidades.</dd>
+    </div>
 
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Qual o endereço da Bikecraft?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Estamos localizados na Rua Moçambique, Centro, Rio de Janeiro. Venha nos visitar e conhecer nossas incríveis bicicletas!</p>
-        </li>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-3" aria-expanded="false">Qual o endereço da
+                Bikecraft?</button></dt>
+        <dd class="cor-c9 font-2-m" id="pergunta-3">Estamos localizados na Rua Moçambique, Centro, Rio de Janeiro. Venha
+            nos visitar e
+            conhecer nossas incríveis bicicletas!</dd>
+    </div>
 
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Quantas trocas posso fazer ao ano?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Você pode fazer até duas trocas de peças ou componentes ao ano, de acordo com os termos e condições da garantia. Entre em contato conosco para obter mais informações.</p>
-        </li>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-4" aria-expanded="false">Quantas trocas posso
+                fazer ao ano?</button></dt>
+        <dd class="cor-c9 font-2-m" id="pergunta-4">Você pode fazer até duas trocas de peças ou componentes ao ano, de
+            acordo com os termos
+            e condições da garantia. Entre em contato conosco para obter mais informações.</dd>
+    </div>
 
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Posso parcelar no cartão?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Sim, você pode parcelar suas compras no cartão de crédito em até 12 vezes, de acordo com as opções disponíveis no PagSeguro.</p>
-        </li>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-5" aria-expanded="false">Posso parcelar no
+                cartão?</button></dt>
+        <dd class="cor-c9 font-2-m" id="pergunta-5">Sim, você pode parcelar suas compras no cartão de crédito em até 12
+            vezes, de acordo com
+            as opções disponíveis no PagSeguro.</dd>
+    </div>
 
-        <li>
-            <h3 class="cor-c11 font-1-m-b">Qual garantia eu possuo?</h3>
-            <img src="img/icones/seta-fechar.svg" alt="">
-            <p class="cor-c9 font-2-m">Oferecemos garantia de 1 ano em nossas bicicletas, que cobre defeitos de fabricação e problemas relacionados ao motor elétrico. Consulte os termos e condições para mais detalhes.</p>
-        </li>        
-    </ul>
+    <div>
+        <dt><button class="cor-c11 font-1-m-b" aria-controls="pergunta-6" aria-expanded="false">Qual garantia eu
+                possuo?</button></dt>
+        <dd class="cor-c9 font-2-m" id="pergunta-6">Oferecemos garantia de 1 ano em nossas bicicletas, que cobre
+            defeitos de fabricação e
+            problemas relacionados ao motor elétrico. Consulte os termos e condições para mais detalhes.</dd>
+    </div>
+</dl>
+
 </article>
 
         
