--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -22,7 +22,7 @@
     <main class="titulo-interno-bg bike-interna-titulo">
         
             <div class="container titulo-container">
-                <p class="font-2-l cor-c5"> $ 4499</p>
+                <p class="font-2-l cor-c5"> $ 3499</p>
                 <h2 class="font-1-xxl cor-branca">Nebula Cosmic<span class="ponto-amarelo">.</span></h2>
             </div>
 
@@ -131,7 +131,7 @@
             </li>
 
             <li class="bikes-choose-list">
-                <a href="bicicletas/nimbus.html" class="link-choose-list">
+                <a href="nimbus.html" class="link-choose-list">
                     <img src="../img/bicicletas/bicicleta1.jpg" alt="magic might">
                     
                     <h3 class="font-1-xl">Nimbus Stark</h3>
