--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikecraft</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/plugins/simple-anime.css">
 <body>
     <header class="header">
         <div class="container-menu">
@@ -22,14 +22,14 @@
     <main class="main">
         <div class="container-main">
             <div class="main-texto">
-                <h1 class="font-1-xxl cor-branca">Bicicletas feitas
+                <h1 class="font-1-xxl cor-branca fadeInDown" data-anime="200">Bicicletas feitas
                 sob medida<span class="ponto-amarelo">.</span></h1>
-                <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a href="#bicicletas" class="btn">SELECIONE A SUA</a>   
+                <p class="font-2-l fadeInDown" data-anime="300">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <a href="#bicicletas" class="btn fadeInDown" data-anime="400">SELECIONE A SUA</a>   
             </div>
 
-            <div>
-                <img class="img-main" src="img/bicicletas/bicicleta1.jpg" alt="bike motorizada">
+            <div >
+                <img class="img-main fadeInDown" src="img/bicicletas/bicicleta1.jpg" alt="bike motorizada" data-anime="400">
             </div>
             
 
@@ -210,6 +210,6 @@
 
     </div>
 </footer>
-
+<script src="js/simple-anime.js"></script>
 <script src="js/script.js"></script>
 </body></html>
