--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -7,6 +7,7 @@
     <title>Bikecraft</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="Magic" content="Put your description here.">
+    <link rel="icon" href="../img/icones/bicicletas/eletrica.svg" type="image/svg+xml">
 
 </head>
 <body>
