--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikecraft</title>
     <link rel="stylesheet" href="../css/style.css">
+        <link rel="icon" href="../img/icones/bicicletas/eletrica.svg" type="image/svg+xml">
+
 </head>
 <body>
         <header class="header">
