--- a/seguros.html
+++ b/seguros.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikecraft</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/plugins/simple-anime.css">
+     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/icones/bicicletas/eletrica.svg" type="image/svg+xml">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="icon" href="img/icones/bicicletas/eletrica.svg" type="image/svg+xml">
+    <link rel="preload" href="css/style.css" as="style">
+
 </head>
 <body>
     <header class="header">
@@ -208,4 +212,7 @@
     </footer>
 <script src="js/simple-anime.js"></script>
 <script src="js/script.js"></script>
+<script>
+    document.documentElement.classList.add('js');
+</script>
 </body></html>
